<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common string that all screen will use -->
    <string name="main_menu">Main Menu</string>
    <string name="app_name">Molecule Madness</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Game</string>
    <string name="instructions">Instructions</string>
    <!-- String for the hint question -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hint">Hint</string>
    <string name="hint_instruction">Answer this to receive a hint!</string>
    <string name="hint_default_question">What Johnny thought was H2O was actually:</string>
    <string name="hint_def_btn_A">Nitrogen</string>
    <string name="hint_def_btn_B">Water</string>
    <string name="hint_def_btn_C">H2S04</string>
    <string name="hint_btn_def_txt">An Answer</string>
    <string name="hint_pass_toast">Correct! Here\'s your hint</string>
    <string name="hint_fail_toast">Wrong! Sorry, try again</string>
    <!-- This area will be for stats strings -->
    <string name="Statistics">Statistics</string>
    <!-- This section will be for main menu strings -->

    <string name="title_activity_new_game">New Game</string>
    <string name="game_mode">Choose a game mode</string>
    <string name="new_game_rb_scoring">Scoring</string>
    <string name="new_game_rb_time_attack">Time Attack</string>
    <string name="new_game_difficulty">Choose a difficulty</string>
    <string name="new_game_rb_easy">Easy</string>
    <string name="new_game_rb_difficult">Difficult</string>
    <string name="new_game_menu_start">Start</string>
    <string name="title_activity_review">Review Quiz</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="review_menu_finish">Finish</string>

    <!-- This section will be for builder strings -->
    <string name="submit">Submit</string>
    <string name="hint">Hint</string>
    <string name="trash">Trash</string>
    <string name="available">Available Elements</string>
    <string name="title_activity_builder">Builder</string>

    <!-- This section will be for molecule names -->
    <string name="sulfuric">Build H2SO4</string>
    <string name="builder_trash_can">Trash can</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="builder_toast_correct">You got it right!</string>
    <string name="builder_toast_wrong">Sorry, you got it wrong!</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_results">Results</string>
    
    <!-- This section will be for the results screen strings -->
    <string name="score">Score</string>

</resources>