<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:text="@string/app_name"
        android:layout_marginTop="38dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/Start_button"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Statistics"
        android:id="@+id/Stats_Button"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:id="@+id/Instruction_Button"
        android:layout_marginBottom="56dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
