<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/game_mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/hint_question_text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_game_spacer"/>

    <RadioGroup
        android:id="@+id/new_game_rg_game_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/new_game_rb_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_rb_time_attack" />

        <RadioButton
            android:id="@+id/rbScoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_rb_scoring" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_difficulty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/hint_question_text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_game_spacer" />
    
    <RadioGroup
        android:id="@+id/new_game_rg_game_diff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/new_game_rb_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_rb_easy" />

        <RadioButton
            android:id="@+id/rbDifficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_rb_difficult" />

    </RadioGroup>

</LinearLayout>
