<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:layout_gravity="center_horizontal"
        android:textSize="34sp"
        android:text="Lorum Ipsum" />
<!-- 
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer"/>
-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/score" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/hint_spacer"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:id="@+id/results_btn_main"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/results_btn_review"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_activity_review" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/results_btn_stats"
        android:layout_gravity="center_horizontal"
        android:text="@string/Statistics" />
</LinearLayout>